[package]
authors = ["Nicolas Decoster"]
categories = ["wasm"]
description = "A causal tree implementation for an offline first editor with wasm bindings."
license = "MPL-2.0"
name = "causaltree-wasm"
repository = "https://gitlab.com/ogadaki/sunnytech-2019-wuer"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
js-sys = "0.3.16"
serde = "^1.0.59"
serde_derive = "^1.0.59"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[features]
default = ["console_error_panic_hook"]
